# LifeStuff

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  README
include/maidsafe/lifestuff/: lifestuff.h  lifestuff_api.h  return_codes.h  securestring_api.h  version.h
installer/common/icons/WinLinux/: installer.xcf  uninstaller.xcf
installer/linux/scripts/: lifestuff_client.desktop  postinst  prerm
installer/windows/cbfs/: cbfs.cab
src/maidsafe/client/: authentication.cc  authentication.h  clientcontroller.cc  clientcontroller.h  clientrpc.h  clientutils.cc  clientutils.h  contacts.cc  contacts.h  imconnectionhandler.cc  imconnectionhandler.h  imhandler.cc  imhandler.h  localstoremanager.cc  localstoremanager.h  privateshares.cc  privateshares.h  sessionsingleton.cc  sessionsingleton.h  storemanager.h  storemanagertaskshandler.h
src/maidsafe/client/filesystem/: dataatlashandler.cc  dataatlashandler.h  distributed_filesystem.proto  pddir.cc  pddir.h  sehandler.cc  sehandler.h
src/maidsafe/client/tests/: client_main.cc  testauthentication.cc  testclientcontroller.cc  testcontacts.cc  testimconnhandler.cc  testimhandler.cc  testimmessaging.cc  testlocalstoremanager.cc  testmaidstoremanager.cc  testprivateshares.cc  testsessionsingleton.cc  teststoremanagertaskshandler.cc
src/maidsafe/common/: accountstatusmanager.cc  accountstatusmanager.h  bufferpacketrpc.cc  bufferpacketrpc.h  chunkstore.cc  chunkstore.h  clientbufferpackethandler.cc  clientbufferpackethandler.h  commonutils.cc  commonutils.h  config.h  contactcache.h  filesystem.cc  kadops.cc  kadops.h  maidsafe.h  opdata.h  version.h
src/maidsafe/common/tests/: testaccountholdersmanager.cc  testaccountstatusmanager.cc  testbufferpackethandler.cc  testchunkstore.cc  testclientbufferpackethandler.cc  testcontactcache.cc  testkadops.cc  testvaultbufferpackethandler.cc
src/maidsafe/encrypt/: CMakeLists.txt  dataiohandler.h  fileiohandler.cc  selfencryption.cc  selfencryption.h  selfencryptionconfig.h  selfencryptionutils.cc  selfencryptionutils.h  stringiohandler.cc
src/maidsafe/encrypt/tests/: encrypt_tests_main.cc  testdataiohandler.cc  testselfencryption.cc
src/maidsafe/fuse/linux/: fslinux.cc  fslinux.h
src/maidsafe/fuse/tests/: testfuse.cc
src/maidsafe/fuse/windows/: fswin.cc  fswin.h
src/maidsafe/lifestuff/: authentication.cc  authentication.h  client_controller.cc  client_controller.h  client_utils.cc  client_utils.h  clientcontroller.cc  clientcontroller.h  clientutils.cc  clientutils.h  contacts.cc  contacts.h  data_atlas.proto  data_atlas_pb.h  data_handler.cc  data_handler.h  data_types.proto  data_types_pb.h  lifestuff.cc  lifestuff.h  lifestuff_api.cc  lifestuff_api.h  lifestuff_impl.cc  lifestuff_impl.h  lifestuff_messages.proto  lifestuff_messages_pb.h  local_chunk_manager.cc  local_chunk_manager.h  local_store_manager.cc  local_store_manager.h  localstoremanager.cc  localstoremanager.h  log.h  maidsafe.h  main.cc  message.h  message_handler.cc  message_handler.h  message_handler_signal_types.h  message_handler_signals.cc  (+29 more)
src/maidsafe/lifestuff/client/: authentication.cc  authentication.h  big_list_delegate.cc  big_list_delegate.h  check_for_messages_thread.h  client_controller.cc  client_controller.h  clientcontroller.cc  clientcontroller.h  clientinterface.h  clientrpc.cc  clientrpc.h  clientutils.cc  clientutils.h  contact.h  contacts.cc  contacts.h  create_public_username_thread.h  create_share_thread.h  create_user_thread.cc  create_user_thread.h  distributed_filesystem.proto  get_email_thread.h  imconnectionhandler.cc  imconnectionhandler.h  imhandler.cc  imhandler.h  join_kademlia_thread.h  localstoremanager.cc  localstoremanager.h  make_directory_thread.h  mount_thread.h  networkstoremanager.cc  networkstoremanager.h  packet_manager.h  privateshares.cc  privateshares.h  profile.h  read_file_thread.h  rename_file_thread.h  (+17 more)
src/maidsafe/lifestuff/command_line/: command_line_main.cc
src/maidsafe/lifestuff/demo/: client_main.cc  commands.cc  commands.h
src/maidsafe/lifestuff/detail/: account_locking.cc  account_locking.h  authentication.cc  authentication.h  client_maid .cc  client_maid.cc  client_maid.h  client_mpid.cc  client_mpid.h  contacts.cc  contacts.h  data_atlas.proto  data_atlas_pb.h  message_handler.cc  message_handler.h  message_handler_signal_types.h  message_handler_signals.cc  new_auth.cc  new_auth.h  public_id.cc  public_id.h  routing_handler.cc  routing_handler.h  routings_handler.cc  routings_handler.h  secure_string.h  session.cc  session.h  user_credentials.cc  user_credentials.h  user_credentials_impl.cc  user_credentials_impl.h  user_storage.cc  user_storage.h  utils.cc  utils.h
src/maidsafe/lifestuff/python_bindings/: lifestuff_python_api.cc  test_main.cc
src/maidsafe/lifestuff/qt_ui/: main.cc  perpetual_data.cc  perpetual_data.h
src/maidsafe/lifestuff/shared/: config.h  cppsqlite3.cc  cppsqlite3.h  filesystem.cc  filesystem.h  maidsafe.h  returncodes.h  version.h
src/maidsafe/lifestuff/sharedtest/: cached_keys.h  cachepassport.h  mockclientcontroller.h  mocksessionsingleton.h  testcallback.h  tests_main.cc
src/maidsafe/lifestuff/sqlutils/: cppsqlite3.cc  cppsqlite3.h  sqlite3.h
src/maidsafe/lifestuff/store_components/: aws_chunk_manager.cc  (+12 more)
src/maidsafe/passport/: CMakeLists.txt  passport.cc  passport.h  passportconfig.h  systempackethandler.cc  systempackethandler.h  systempackets.cc  systempackets.h
src/maidsafe/pki/: CMakeLists.txt  maidsafevalidator.cc  maidsafevalidator.h
src/maidsafe/shared/: chunkstore.cc  chunkstore.h  commonutils.cc  commonutils.h  config.h  contactcache.cc  contactcache.h  cppsqlite3.cc  cppsqlite3.h  filesystem.cc  filesystem.h  maidsafe.h  maidsafe_service.proto  maidsafe_service_messages.proto  opdata.h  returncodes.h  sync_data.proto  vaultbufferpackethandler.cc  vaultbufferpackethandler.h  version.h
src/maidsafe/sharedtest/: cached_keys.h  cachepassport.h  chunkstoreops.h  localvaults.h  mockkadops.cc  mockkadops.h  networktest.cc  networktest.h  testcallback.h  tests_main.cc  threadpool.h
(+247 files in other folders)
